Fix: Header with wrong colors

--- a/src/frontend/src/style/index.css
+++ b/src/frontend/src/style/index.css
@@ -47,8 +47,8 @@
     --chat-bot-icon: #afe6ef;
     --chat-user-icon: #aface9;
 
-    --component-icon: #4338ca;
-    --flow-icon: #0f766e;
+    --component-icon: #D66591;
+    --flow-icon: #3066C7;
 
     /* Colors that are shared in dark and light mode */
     --blur-shared: #151923de;
